CMS7-8988: fix blurry perspective icons in Firefox
The line-height of the SVG's parent decreased the height of the SVG.

--- a/cms/api/src/main/styling/less/_perspectives_switcher.less
+++ b/cms/api/src/main/styling/less/_perspectives_switcher.less
@@ -31,6 +31,7 @@
 
       a {
         color: @main-menu-text-color;
+        line-height: normal;
 
         img, svg {
           display: block;
